# SN-IEgenerator

./: .gitignore  README.md  __init__.py  mock_test.py  multilines.py  toyLRwithbounce.py  toyVvertex_calo.py  toyVwithbounce.py  toydoubleLR.py  toydoubleV.py  toydoubleVvary.py  toydoublehelix_calo.py  toyhaystackN.py  toyillumination.py  toyleftright_calo.py  toysinglehelix_calo.py  toysinglescatter_calo.py
FLTranslate/: CMakeLists.txt  FLSimulateArgs.cc  FLSimulateArgs.h  fltranslate.cc  fltranslate_services.conf  getopt_pp.cpp  getopt_pp.h
ToyData/1T/: haystack1.root  haystack1_2000.root  illumination.root  output_hay_1T.brio  output_illu_1T.brio
ToyData/2H/: 2helix_calo.brio  2helix_calo.tsim
ToyData/2T/: haystack2.root  haystack2_2000.brio  haystack2_2000.root  output_2T.brio
ToyData/3T/: haystack3.tsim  haystack3_2000.root  output_hay_1T.brio
utility/: __init__.py  euclid.py  geometrycheck.py  helix.py  helixrecon.conf
